--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           </p>
           <a href="https://pongjs-production.up.railway.app/">
             <video
+              loop
               type="video/mp4"
               autoplay
               muted
@@ -75,9 +76,7 @@
         </div>
         <div class="card">
           <p class="sub-title para">Rock Paper Scissor Game.</p>
-          <p class="sub-title">
-            Rock Paper Scissor Game made in Pure Javascript.
-          </p>
+          <p class="sub-title">Javascript Rock Paper Scissor Odin Project.</p>
           <a href="https://jhonneg.github.io/rock-paper-scissor/"
             ><img
               alt="RPS"
@@ -88,14 +87,21 @@
           <p class="sub-title para">Discord weather bot</p>
           <p class="sub-title">Discord weather bot built with DiscordJS</p>
           <a href="https://github.com/Jhonneg/DiscordJS"
-            ><img
-              alt="discordbot"
-              src="assets/Screencast from 05-13-2024 11_50_34 AM.gif"
-          /></a>
+            ><video
+              loop
+              type="video/mp4"
+              autoplay
+              muted
+              width="500"
+              height="300"
+              name="pong"
+              src="https://github.com/Jhonneg/DiscordJS/assets/94491571/91a18e41-b78a-43d1-a748-de81feccdc5a"
+            ></video
+          ></a>
         </div>
         <div class="card">
           <p class="sub-title para">Face Recognition App</p>
-          <p class="sub-title">Build with React, Node/Express and Postgres</p>
+          <p class="sub-title">Build with React and TailwindCSS</p>
           <a href="https://smartbrian.netlify.app/">
             <img
               alt="faceappexample"
@@ -104,15 +110,15 @@
           </a>
         </div>
         <div class="card">
-          <p class="sub-title para">Library in JS</p>
+          <p class="sub-title para">Crown Clothing</p>
           <p class="sub-title">
-            Book library made in JS, you can add books, remove it and mark it as
-            read
+            E-Commerce shop built with React, Typescript, Styled-components,
+            Redux and Firebase
           </p>
-          <a href="https://jhonneg.github.io/libraryJS/"
+          <a href="https://crownfashion.netlify.app/"
             ><img
-              alt="loginform"
-              src="assets/Screenshot from 2024-03-22 19-42-15.png"
+              alt="react store"
+              src="assets/Screenshot from 2024-07-13 23-32-34.png"
           /></a>
         </div>
       </section>
