added vue project

--- a/index.html
+++ b/index.html
@@ -47,14 +47,20 @@
       </div>
       <section class="main">
         <div class="card">
-          <p class="sub-title para">Lawfirm Landing page</p>
-          <p class="sub-title">Lawfirm landing page website using bootstrap.</p>
-          <a href="https://jhonneg.github.io/better-call-saul/"
-            ><img
-              class="lawgif"
-              alt="lawfirm"
-              src="assets/Screenshot from 2024-02-01 10-50-31.png"
-          /></a>
+          <p class="sub-title para">Quiz app</p>
+          <p class="sub-title">Quiz App built with Vue.js</p>
+          <a href="https://jhonneg.github.io/vueQuiz/"
+            ><video
+              loop
+              type="video/mp4"
+              autoplay
+              muted
+              width="500"
+              height="300"
+              name="pong"
+              src="https://github.com/user-attachments/assets/d9e9aab6-84f3-4570-8453-752ac60fba68"
+            ></video
+          ></a>
         </div>
         <div class="card">
           <p class="sub-title para">Multiplayer Pong</p>
@@ -149,7 +155,7 @@
         ><img
           width="50"
           height="50"
-          src="https://img.icons8.com/ios-filled/50/FFFFFF/github.png"
+          src="assets/github-mark-white.svg"
           alt="github"
       /></a>
     </footer>
